# elastix

./: CMakeLists.txt  ElastixConfig.cmake.in
.github/workflows/: ElastixGitHubActions.yml
CMake/: elastixExportTarget.cmake
Testing/CI/Azure/: ci.yml
dox/externalproject/: CMakeLists.txt  ElastixTranslationExample.cxx
